# VideoLLaMB

./: .gitignore  README.md  pyproject.toml
llava/: constants.py  mm_utils.py  vid_utils.py
llava/eval/: eval_videoqa.py  eval_videoqa_consistency.py  eval_videoqa_context.py  eval_videoqa_correctness.py  eval_videoqa_detailed_orientation.py  eval_videoqa_moviechat.py  eval_videoqa_temporal.py  model_videoqa.py  model_videoqa_act.py  model_videoqa_consistency.py  model_videoqa_general.py  model_videoqa_mc.py  model_videoqa_moviechat.py  model_videoqa_moviechat_ws.py  model_videoqa_mvbench.py
llava/model/: __init__.py  builder.py  llava_arch.py
llava/model/language_model/: llava_llama.py  llava_llama_retro.py  llava_llama_retro_lm.py
llava/model/multimodal_encoder/: builder.py  clip_encoder.py  clip_vid_encoder.py  mae_encoder.py  videomae_encoder.py  vit_encoder.py
llava/model/multimodal_projector/: builder.py  identity_projector.py  mlp_projector.py  mlp_transformer_projector.py  qformer_projector.py  retent_transformer_projector.py  rmt_r_transformer_cap_projector.py  rmt_r_transformer_projector.py  rmt_transformer_projector.py  (+4 more)
llava/serve/: arguments_live.py  cli.py  cli_streaming.py  gradio_demo.py  gradio_utils.py  inference.py
llava/train/: llava_trainer.py  train.py  train_mem.py
playground/: DATA.md
scripts/: eval_acc.py  eval_moviechat.py  eval_nextqa.py  finetune_video_image.slurm  finetune_video_image_l.slurm  finetune_video_image_loss.slurm  zero1.json  zero2_offload.json
scripts/eval/: egoplan.sh  egoschema.sh  mvbench.sh  nextqa.sh
(+35 files in other folders)
