[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llava"
version = "1.2.2.post1"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.2.1", "torchvision==0.17.1",
    "transformers==4.39.1", "tokenizers==0.15.1", "sentencepiece==0.1.99", "shortuuid",
    "accelerate==0.27.2", "peft", "bitsandbytes",
    "pydantic", "markdown2[all]", "numpy", "scikit-learn==1.2.2",
    "gradio==4.16.0", "gradio_client==0.8.1",
    "requests", "httpx==0.24.0", "uvicorn", "fastapi", "protobuf",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.9.16",
    "opencv-python", "imageio", "decord", "pytorchvideo"
]

[project.optional-dependencies]
train = ["deepspeed==0.14.0", "ninja", "wandb"]
build = ["build", "twine"]

[project.urls]
"Bug Tracker" = "https://github.com/patrick-tssn/VideoLLaMB/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
